--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 
     <h1>Moringa school</h1>
-    <p>Am doing software devevelopment in moring school</p>
+    <p>Am doing software devevelopment in Moringa school</p>
 </body>
 </html>
