add images folder

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 
     <h1>Moringa school</h1>
     <p>Am doing software devevelopment in Moringa school</p>
+    <h4>My image</h4>
+
+    <img src="/images/prifile.jpg" alt="Profile picture">
 </body>
 </html>
